--- a/src/components/style/Prislista.css
+++ b/src/components/style/Prislista.css
@@ -53,7 +53,6 @@
   }
 
   .price-item {
-    max-width: none; /* Снять ограничение ширины */
-    width: 100%; /* Полная ширина */
+    max-width: 100%; /* Полная ширина */
   }
 }
